--- a/weather/index.html
+++ b/weather/index.html
@@ -67,7 +67,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCf5NRHPicV6lAAu8nsAclDWM6aBMs3paI&loading=async">
+    src="https://maps.googleapis.com/maps/api/js?key=AddYourGoogleMapApi&loading=async">
   </script>
 </body>
 </html>
